PROD-12-18-19/force-app/main/default/objects/Deals__c/fields/BAM_Finance_Pipeline_Report__c.field-meta.xml
<CustomField>
    <fullName>BAM_Finance_Pipeline_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This  Field is currently used for BAM Finance Deals</description>
    <inlineHelpText>Check the box to include this deal in the Deals pipeline report.</inlineHelpText>
    <label>BAM Finance Pipeline Report</label>
    <type>Checkbox</type>
</CustomField>