PROD-12-18-19/force-app/main/default/objects/Deals__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan/Bond Underwriting</fullName>
            </value>
            <value>
                <fullName>Balance Sheet Loan</fullName>
            </value>
            <value>
                <fullName>Development Loan</fullName>
            </value>
            <value>
                <fullName>RCF/Capex Loan</fullName>
            </value>
            <value>
                <fullName>Public Bonds</fullName>
            </value>
            <value>
                <fullName>USPP</fullName>
            </value>
            <value>
                <fullName>Pref Equity</fullName>
            </value>
            <value>
                <fullName>Common Equity</fullName>
            </value>
            <value>
                <fullName>M&amp;A Advisory</fullName>
            </value>
            <value>
                <fullName>Debt Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>