PROD-12-18-19/force-app/main/default/objects/Deals__c/listViews/My_Closed_Deals.listView-meta.xml
<ListView>
    <fullName>My_Closed_Deals</fullName>
    <columns>NAME</columns>
    <columns>Size__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Sub_Region__c</columns>
    <columns>Signing_Date__c</columns>
    <columns>Closing_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed,Dead</value>
    </filters>
    <label>.My Closed Deals</label>
    <sharedTo>
        <role>BAM_Finance</role>
        <roleAndSubordinates>BAM_Finance</roleAndSubordinates>
    </sharedTo>
</ListView>